@@ -1053,7 +1053,7 @@ cl_symbols[] = {
 {SYS_ "*IGNORE-EOF-ON-TERMINAL-IO*", SI_SPECIAL, NULL, -1, Cnil},
 {SYS_ "*INDENT-FORMATTED-OUTPUT*", SI_SPECIAL, NULL, -1, Cnil},
 {SYS_ "*INIT-FUNCTION-PREFIX*", SI_SPECIAL, NULL, -1, Cnil},
-{SYS_ "*INTERRUPT-ENABLE*", SI_SPECIAL, NULL, 1, Ct},
+{SYS_ "*INTERRUPTS-ENABLED*", SI_SPECIAL, NULL, 1, Ct},
 {SYS_ "*KEEP-DEFINITIONS*", SI_SPECIAL, NULL, -1, Ct},
 {SYS_ "*LOAD-HOOKS*", SI_SPECIAL, NULL, -1, OBJNULL},
 {SYS_ "*LOAD-SEARCH-LIST*", SI_SPECIAL, NULL, -1, Cnil},
@@ -1807,6 +1807,8 @@ cl_symbols[] = {
 {EXT_ "WEAK-POINTER", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "MAKE-WEAK-POINTER", EXT_ORDINARY, si_make_weak_pointer, 1, OBJNULL},
 {EXT_ "WEAK-POINTER-VALUE", EXT_ORDINARY, si_weak_pointer_value, 1, OBJNULL},
+
+{SYS_ "*ALLOW-WITH-INTERRUPTS*", SI_ORDINARY, NULL, -1, Ct},
 
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
