@@ -18,6 +18,71 @@
 
 (in-package "MP")
 
+(defmacro without-interrupts (&body body)
+  #!+sb-doc
+  "Executes BODY with all deferrable interrupts disabled. Deferrable
+interrupts arriving during execution of the BODY take effect after BODY has
+been executed.
+
+Deferrable interrupts include most blockable POSIX signals, and
+SB-THREAD:INTERRUPT-THREAD. Does not interfere with garbage collection, and
+unlike in many traditional Lisps using userspace threads, in SBCL
+WITHOUT-INTERRUPTS does not inhibit scheduling of other threads.
+
+Binds ALLOW-WITH-INTERRUPTS, WITH-LOCAL-INTERRUPTS and WITH-RESTORED-INTERRUPTS
+as a local macros.
+
+WITH-RESTORED-INTERRUPTS executes the body with interrupts enabled if and only
+if the WITHOUT-INTERRUPTS was in an environment in which interrupts were allowed.
+
+ALLOW-WITH-INTERRUPTS allows the WITH-INTERRUPTS to take effect during the
+dynamic scope of its body, unless there is an outer WITHOUT-INTERRUPTS without
+a corresponding ALLOW-WITH-INTERRUPTS.
+
+WITH-LOCAL-INTERRUPTS executes its body with interrupts enabled provided that
+for there is an ALLOW-WITH-INTERRUPTS for every WITHOUT-INTERRUPTS surrounding
+the current one. WITH-LOCAL-INTERRUPTS is equivalent to:
+
+  (allow-with-interrupts (with-interrupts ...))
+
+Care must be taken not to let either ALLOW-WITH-INTERRUPTS or
+WITH-LOCAL-INTERRUPTS appear in a function that escapes from inside the
+WITHOUT-INTERRUPTS in:
+
+  (without-interrupts
+    ;; The body of the lambda would be executed with WITH-INTERRUPTS allowed
+    ;; regardless of the interrupt policy in effect when it is called.
+    (lambda () (allow-with-interrupts ...)))
+
+  (without-interrupts
+    ;; The body of the lambda would be executed with interrupts enabled
+    ;; regardless of the interrupt policy in effect when it is called.
+    (lambda () (with-local-interrupts ...)))
+"
+  (with-unique-names (outer-allow-with-interrupts outer-interrupts-enabled)
+    `(multiple-value-prog1
+         (macrolet ((allow-with-interrupts (&body allow-forms)
+                      `(let ((*allow-with-interrupts* ,',outer-allow-with-interrupts))
+                         ,@allow-forms))
+                    (with-restored-interrupts (&body with-forms)
+                      `(let ((*interrupts-enabled* ,',outer-interrupts-enabled))
+                         ,@with-forms))
+                    (with-local-interrupts (&body with-forms)
+                      `(let* ((*allow-with-interrupts* ,',outer-allow-with-interrupts)
+                              (*interrupts-enabled* ,',outer-allow-with-interrupts))
+                         (when ,',outer-allow-with-interrupts
+                           (si::check-pending-interrupts))
+                         (locally ,@with-forms))))
+           (let* ((,outer-interrupts-enabled *allow-with-interrupts*)
+                  (*interrupts-enabled* nil)
+                  (,outer-allow-with-interrupts *allow-with-interrupts*)
+                  (*allow-with-interrupts* nil))
+             (declare (ignorable ,outer-allow-with-interrupts
+                                 ,outer-interrupts-enabled))
+             ,@body))
+       (when *interrupts-enabled*
+         (si::check-pending-interrupts)))))
+
 (defmacro with-lock ((lock) &body body)
   #-threads
   `(progn ,@body)
@@ -26,18 +91,18 @@
   ;; the function. That means we lose the information and ignore that
   ;; the lock was actually acquired. Furthermore, a lock can be recursive
   ;; and mp:lock-holder is also not reliable.
+  ;;
+  ;; Next notice how we need to disable interrupts around the body and
+  ;; the get-lock statement, to ensure that the unlocking is done with
+  ;; interrupts disabled.
   #+threads
-  `(let* ((%the-lock ,lock)
-          (%count (mp:lock-count %the-lock)))
-     (unwind-protect
-          (progn
-            (mp::get-lock %the-lock)
-            ,@body)
-       (when (> (mp:lock-count %the-lock) %count)
-         (mp::giveup-lock %the-lock)))))
-
-(defmacro without-interrupts (&body body)
-  `(let ((si:*interrupt-enable* nil))
-    (multiple-value-prog1
-	(progn ,@body)
-      (si::check-pending-interrupts))))
+  (with-unique-names (lock count interrupts)
+    `(let* ((,lock ,lock)
+            (,count (mp:lock-count ,lock)))
+       (without-interrupts
+           (unwind-protect
+                (with-restored-interrupts
+                    (mp::get-lock ,lock)
+                  (locally ,@body))
+             (when (> (mp:lock-count ,lock) ,count)
+               (mp::giveup-lock ,lock)))))))
